# ws_my_robot

./: .gitignore
launch/: my_robot.launch.py  servo_example.launch.py
src/keyboard_input/: package.xml  setup.cfg  setup.py
src/keyboard_input/keyboard_input/: keyboard_input.py
src/keyboard_input/launch/: demo.launch.py
src/moveit_simulate/: CMakeLists.txt  package.xml
src/moveit_simulate/src/: joint_states_listener.cpp  moveit_simulate.cpp
src/my_arm1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_arm1_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  multipleshapes.ros2_control.xacro  multipleshapes.srdf  ompl_planning.yaml  ros2_controllers.yaml
src/my_arm1_moveit_config/launch/: demo.launch.py  demo0.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/meshes/: link0.STL  link2.STL  link3.STL  link4.STL
src/my_robot_description/meshes/my_robot/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL
src/my_robot_description/urdf/: my_robot.urdf
src/my_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  multipleshapes.ros2_control.xacro  multipleshapes.srdf  multipleshapes.urdf.xacro  ros2_controllers.yaml
src/my_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_robot_servo/: CMakeLists.txt  package.xml
src/my_robot_servo/config/: my_robot_simulated_config.yaml
src/simple_demo/: CMakeLists.txt  package.xml
src/simple_demo/launch/: display_robot.launch.py  first_try.launch.py  first_try1.launch.py  get_robot_state.launch.py  motion_planning.launch .py  motion_planning.launch.py
src/simple_demo/rviz/: moveit.rviz
src/simple_demo/src/: first_try.cpp  get_robot_state.cpp  joint_states_listener.cpp  motion_planning.cpp
src/simple_demo2/: package.xml  setup.cfg  setup.py
src/simple_demo2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/simple_demo2/launch/: demo.launch.py  display.launch.py
src/simple_demo2/simple_demo2/: state_publisher.py
src/socket_connect/: package.xml  setup.cfg  setup.py
src/socket_connect/socket_connect/: socket_connect.py
src/two_wheeled_robot/: CMakeLists.txt  package.xml
src/two_wheeled_robot/launch/: two_wheeled_robot.launch.py
src/two_wheeled_robot/urdf/: two_wheeled_robot.urdf
src/urdf_tutorial_r2d2/: package.xml  setup.py
